syntax = "proto3";

package messages.warning;

option go_package = "farm/src/proto/messages/warning";

message WarningRequest {
  uint32 farm_id = 1;
}

message WarningResponse {
  string device_serial = 1;
  float difference = 2;
}